@@ -1,3 +1,6 @@
+# Wrapper class
+# Most functionalities are in model.
+
 from __future__ import absolute_import, division
 from __future__ import print_function, unicode_literals
 from sandhisplitter.model import Model
