@@ -7,8 +7,6 @@ author = Jerin Philip
 author-email = monu1618@gmail.com
 home-page = 
 classifier =
-  #Environment :: Web Environment
-  #Framework :: Flask
   Intended Audience :: Developers
   Intended Audience :: Information Technology
   License :: OSI Approved
@@ -26,3 +24,7 @@ source-dir = docs
 [wheel]
 universal = 1
 
+[entry_points]
+console_scripts=
+    sandhisplitter_train = sandhisplitter.train:main
+    sandhisplitter_benchmark_model = sandhisplitter.benchmark_model:main
